--- a/source/css/custom.styl
+++ b/source/css/custom.styl
@@ -1,7 +1,7 @@
 // Custom styles.
 // 存放于themes/next/suource/css/_custom目录下
 body {
-    background:url(https://ww1.sinaimg.cn/large/e6dffef4gy1g13w0a799pj24mo334diy.jpg);
+    background:url(http://ww1.sinaimg.cn/large/e6dffef4gy1g13w0a799pj24mo334diy.jpg);
     background-repeat: no-repeat;
     background-attachment:fixed;
     background-position: 50% 75%;
